[package]
name = "specbase"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
readme = "README.md"
repository = "https://github.com/marvin-hansen/specbase"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>"]


# Optimize all crates
[profile.release]
opt-level = 3
strip = true  # Automatically strip debug symbols from the binary
lto = true    # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


# There's a Cargo feature named profile-overrides
# that lets you override the optimization level of dependencies.
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
[profile.release.package."*"]
opt-level = 3
strip = 'debuginfo'  # Automatically strip debug infos from the binary to reduce size
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization


[dependencies]
